--- a/MonthlyStatement/Areas/Admin/Views/ReportPeriods/FormDepartmentEdit.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/ReportPeriods/FormDepartmentEdit.cshtml
@@ -48,7 +48,7 @@
                                 <div class="form-group">
                                     <div class="checkbox">
                                         <label for="check">
-                                            <input name="@items.category_of_id" type="checkbox" id="categorylv2-@items.category_id" value="@item.category_id" />
+                                            <input name="@items.category_of_id" type="checkbox" id="@(items.category_of_id)categorylv2-@(items.category_id)" value="@item.category_id" />
                                             <span class="fake-input"></span>
                                             <span class="fake-label">@items.category_content</span>
                                         </label>
@@ -57,32 +57,6 @@
                             </div>
                         }
                     }
-
-                    @*<div class="form-group">
-                        <div class="checkbox">
-                            <label for="check">
-                                <input type="checkbox" onClick="toggle(this)" /> Toggle All<br />
-                            </label>
-                        </div>
-                    </div>
-                    <div class="media mt-3">
-                        <div class="pr-5" href="#">
-                        </div>
-                        <div class="form-group">
-                            <div class="checkbox">
-                                <label for="check">
-                                    <input type="checkbox" name="foo" value="bar1"> Bar 1<br />
-                                </label>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="checkbox">
-                            <label for="check">
-                                <input type="checkbox" onClick="toggle(this)" /> Toggle All<br />
-                            </label>
-                        </div>
-                    </div>*@
                     <div class="text-right">
                         <button class="btn btn-primary mr-1" type="submit">Lưu</button>
                         <button class="btn btn-secondary" type="reset">Hủy</button>
@@ -92,22 +66,26 @@
         </div>
     </div>
 </div>
-<script language="JavaScript">
-    function toggle(source) {
-        checkboxes = document.getElementsByName('foo');
-        for (var i = 0, n = checkboxes.length; i < n; i++) {
-            checkboxes[i].checked = source.checked;
-        }
-    }
-</script>
 <script src="~/Scripts/jquery-3.4.1.min.js"></script>
 <script>
     $(document).ready(function () {
-        $('[id^="categorylv2-"]').on('input', function () {
+        $('[id*="categorylv2-"]').on('input', function () {
             var id = $(this).attr('name');
-            $('#categorylv1-' + id).prop('checked', true);
-            $('[id^="categorylv2-"]').each('')
-
+            if ($(this).prop('checked')) {
+                if ($('#categorylv1-' + id).prop('checked') == false) {
+                    $('#categorylv1-' + id).prop('checked', true);
+                }
+            } else {
+                var check = false;
+                $('[id^="' + id + 'categorylv2-"]').each(function () {
+                    if ($(this).prop('checked')) {
+                        check = true;
+                    }
+                });
+                if (check == false) {
+                    $('#categorylv1-' + id).prop('checked', false);
+                }
+            }
         });
     });
 </script>
