--- a/MonthlyStatement/Areas/Admin/Views/YearReport/Index.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/YearReport/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model IEnumerable<MonthlyStatement.Models.ReportYear>
+
+@{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div class="main-content" style="min-height: 676px;">
@@ -36,16 +38,20 @@
                                 }
                             </div>
                             <div class="row">
-                                <div class="col-12 col-md-6 col-lg-3">
-                                    <a class="card card-success" href="#">
-                                        <div class="card-header">
-                                            <h4>Năm 2022</h4>
-                                        </div>
-                                        <div class="card-body">
-                                            <p>Các kỳ báo cáo năm 2022</p>
-                                        </div>
-                                    </a>
-                                </div>
+                                <div hidden="hidden" id="appendata"></div>
+                                @foreach (var item in Model)
+                                {
+                                    <div class="col-12 col-md-6 col-lg-3">
+                                        <a class="card card-success" href="@Url.Action("Index","ReportPeriods", new {id = item.report_year_id})">
+                                            <div class="card-header">
+                                                <h4>Năm @item.year</h4>
+                                            </div>
+                                            <div class="card-body">
+                                                <p>Các kỳ báo cáo năm @item.year</p>
+                                            </div>
+                                        </a>
+                                    </div>
+                                }
                             </div>
                         </div>
                     </div>
@@ -54,6 +60,7 @@
         </div>
     </div>
 </div>
+
 
 <script src="~/Scripts/jquery-3.4.1.min.js"></script>
 <script>
@@ -92,6 +99,7 @@
                             context: document.body,
                             success: function (result) {
                                 if (result == "Success") {
+                                    $("#appendate").replaceWith("");
                                     $("#add_report_year").replaceWith("");
                                     swal('Thêm thành công', {
                                         icon: 'success',
