--- a/MonthlyStatement/Areas/Admin/Views/Categories/Index.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/Categories/Index.cshtml
@@ -7,130 +7,113 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="panel-header bg-primary-gradient">
-    <div class="page-inner py-5">
-        <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
-            <div>
-                <h2 class="text-white pb-2 fw-bold">Quản lý danh mục</h2>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="page-inner mt--5">
-    <div class="row">
-        <div class="col-md-12">
-            <div class="card">
-                <div class="card-body">
-                    <div class="table-responsive">
-                        <div id="add-row_wrapper" class="dataTables_wrapper container-fluid dt-bootstrap4 ">
-                            <div class="row">
-                                <div class="col-sm-12 col-md-6">
-                                    <a style="color:white" type="button" class="btn bg-primary-gradient btn-round" href="@Url.Action("Create", "Categories")">
-                                        <i class="fa fa-plus"></i>
-                                        Tạo danh mục cha
-                                    </a>
-                                    <a style="color:white" type="button" class="btn bg-danger-gradient btn-round" href="@Url.Action("Create1", "Categories")">
-                                        <i class="fa fa-plus"></i>
-                                        Tạo danh mục con
-                                    </a>
-                                </div>
-                                <div class="col-sm-12 col-md-12">
-                                    <div class="dataTables_filter">
-                                        <label>
-                                            Tìm kiếm
-                                            <input class="form-control btn-round" type="text" id="Search" aria-label="Search" data-width="200">
-                                        </label>
+<section class="section">
+    <div class="section-body">
+        <div class="row">
+            <div class="col-12">
+                <div class="card">
+                    <div class="card-header bg-primary" style="height:100px">
+                        <h4 class="text-white" style="font-size:1.75rem">Quản lý danh mục</h4>
+                        <div class="card-header-form">
+                            <form>
+                                <div class="input-group">
+                                    <input class="form-control" type="text" id="Search" placeholder="Tìm kiếm" aria-label="Search" data-width="200" style="width: 200px;">
+                                    <div class="input-group-btn">
+                                        <button class="btn btn-primary"><i class="fas fa-search"></i></button>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-sm-12">
-                                    <table id="add-row" class="display table table-striped table-hover dataTable" role="grid" aria-describedby="add-row_info">
-                                        <thead>
-                                            <tr>
-                                                <th>STT</th>
-                                                <th>Danh mục</th>
-                                                <th style="width: 3%"></th>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card-body">
+                    <div class="form-group">
+                        <div class="col-sm-12 buttons">
+                            <a style="color:white" type="button" class="btn btn-primary btn-round" href="@Url.Action("Create", "Categories")">
+                                <i class="fa fa-plus"></i>
+                                Tạo danh mục cha
+                            </a>
+                            <a style="color:white" type="button" class="btn btn-danger btn-round" href="@Url.Action("Create1", "Categories")">
+                                <i class="fa fa-plus"></i>
+                                Tạo danh mục con
+                            </a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <table class="table table-striped dataTable no-footer" id="table-1" role="grid" aria-describedby="table-1_info">
+                                <thead>
+                                    <tr role="row">
+                                        <th class="text-center">
+                                            STT
+                                        </th>
+                                        <th>Danh mục</th>
+                                        <th class="text-center">
+
+                                        </th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @foreach (var item in Model.Where(c => c.category_of_id == null).ToList())
+
+                                    {
+                                        i = i + 1;
+                                        int j = 0;
+
+                                        <tr class="Search">
+                                            <td class="text-center">
+                                                @i
+                                            </td>
+                                            <td style="font-weight:bold">
+                                                @item.category_content
+                                            </td>
+                                            <td class="text-center">
+                                                <div class="buttons">
+                                                    <a class="btn btn-icon btn-info" data-original-title="Thông tin danh mục" href="@Url.Action("Details", "Categories", new { id = item.category_id })">
+                                                        <i class="fas fa-info-circle"></i>
+                                                    </a>
+                                                    <a class="btn btn-icon btn-primary" data-original-title="Sửa" href="@Url.Action("Edit", "Categories", new { id = item.category_id })">
+                                                        <i class="far fa-edit"></i>
+                                                    </a>
+                                                </div>
+                                            </td>
+                                        </tr>
+                                        foreach (var items in Model.Where(c => c.category_of_id == item.category_id).ToList())
+
+                                        {
+                                            j++; 
+                                            <tr class="Search">
+                                                <td class="text-center">
+                                                    @(i).@(j)
+                                                </td>
+                                                <td>
+                                                    &emsp;
+                                                    &emsp;
+                                                    @items.category_content
+                                                </td>
+                                                <td class="text-center">
+                                                    <div class="buttons">
+                                                        <a class="btn btn-icon btn-info" data-original-title="Thông tin danh mục" href="@Url.Action("Details", "Categories", new { id = items.category_id })">
+                                                            <i class="fas fa-info-circle"></i>
+                                                        </a>
+                                                        <a class="btn btn-icon btn-primary" data-original-title="Sửa" href="@Url.Action("Edit", "Categories", new { id = item.category_id })">
+                                                            <i class="far fa-edit"></i>
+                                                        </a>
+                                                    </div>
+                                                </td>
                                             </tr>
-                                        </thead>
-                                        <tbody>
-
-                                            @foreach (var item in Model.Where(c => c.category_of_id == null).ToList())
-
-                                            {
-                                                i = i + 1;
-                                                int j = 0;
-
-
-                                                <tr class="Search">
-                                                    <td>
-                                                        @i
-                                                    </td>
-                                                    <td style="font-weight:bold">
-                                                        @item.category_content
-                                                    </td>
-                                                    <td>
-                                                        <div class="form-button-action">
-                                                            <a style="width:1px" type="button" data-toggle="tooltip" title="" class="btn btn-icon btn-info" data-original-title="Thông tin danh mục" href="@Url.Action("Details", "Categories", new { id = item.category_id })" target="_blank">
-                                                                <i class="fa fa-info"></i>
-                                                            </a>
-                                                            &nbsp;
-                                                            <a style="width:1px" type="button" data-toggle="tooltip" title="" class="btn btn-icon btn-primary" data-original-title="Sửa" href="@Url.Action("Edit", "Categories", new { id = item.category_id })" target="_blank">
-                                                                <i class="fa fa-edit"></i>
-                                                            </a>
-                                                            &nbsp;
-                                                            @*<a style="width:1px" type="button" data-toggle="tooltip" title="" class="btn btn-icon btn-danger" data-original-title="Xóa" href="@Url.Action("Delete", "Categories", new { id = item.category_id })" target="_blank">
-                                                                <i class="fas fa-ban"></i>
-                                                            </a>*@
-                                                        </div>
-                                                    </td>
-
-                                                </tr>
-
-                                                foreach (var items in Model.Where(c => c.category_of_id == item.category_id).ToList())
-
-                                                {
-                                                    j++;
-                                                    <tr class="Search">
-                                                        <td>
-                                                            @(i).@(j)
-                                                        </td>
-                                                        <td>
-                                                            &emsp;
-                                                            &emsp;
-                                                            @items.category_content
-                                                        </td>
-                                                        <td>
-                                                            <div class="form-button-action">
-                                                                <a style="width:1px" type="button" data-toggle="tooltip" title="" class="btn btn-icon btn-info" data-original-title="Thông tin danh mục" href="@Url.Action("Details", "Categories", new { id = items.category_id })" target="_blank">
-                                                                    <i class="fa fa-info"></i>
-                                                                </a>
-                                                                &nbsp;
-                                                                <a style="width:1px" type="button" data-toggle="tooltip" title="" class="btn btn-icon btn-primary" data-original-title="Sửa" href="@Url.Action("Edit", "Categories", new { id = items.category_id })" target="_blank">
-                                                                    <i class="fa fa-edit"></i>
-                                                                </a>
-                                                                &nbsp;
-                                                                @*<a style="width:1px" type="button" data-toggle="tooltip" title="" class="btn btn-icon btn-danger" data-original-title="Xóa" href="@Url.Action("Delete", "Categories", new { id = items.category_id })" target="_blank">
-                                                                    <i class="fas fa-ban"></i>
-                                                                </a>*@
-                                                            </div>
-                                                        </td>
-                                                    </tr>
-                                                }
-                                            }
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </div>
-
+                                        }
+                                    }
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+</section>
 
 <script src="~/Scripts/jquery-3.4.1.min.js"></script>
 <script>
