--- a/MonthlyStatement/Views/Shared/_Layout.cshtml
+++ b/MonthlyStatement/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
     <!-- Custom style CSS -->
     <link rel="stylesheet" href="~/assets/css/custom.css" />
     <link rel='shortcut icon' type='image/x-icon' href='~/assets/img/vlu/logo.png' />
-
+    <link rel="stylesheet" href="~/assets/bundles/pretty-checkbox/pretty-checkbox.min.css">
 </head>
 
 <body>
