--- a/MonthlyStatement/Areas/Admin/Views/Categories/Create1.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/Categories/Create1.cshtml
@@ -5,44 +5,59 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@using (Html.BeginForm("Create1", "Categories", FormMethod.Post, new { }))
-{
-    <div class="page-inner mt--5">
+<section class="section">
+    <div class="section-body">
         <div class="row">
-            <div class="col-xl-12">
-                <!-- Account details card-->
-                <div class="card mb-4">
-                    <div class="card-header"><b>Thông tin chi tiết</b></div>
-                    <div class="card-body" style="margin-top: 0.2rem">
-                        <!-- Form Group (Chọn danh mục cha)-->
-                        <div class="mb-3">
-                            <label class="small mb-1">Chọn danh mục cha</label>
-                            @Html.DropDownList("category_of_id", null, htmlAttributes: new { @class = "form-control" })
-                            @Html.ValidationMessageFor(model => model.category_of_id, "", new { @class = "text-danger" })
-                        </div>
-                        <div class="row gx-3 mb-3">
-                            <!-- Form Group (Tên danh mục)-->
-                            <div class="col-md-6">
-                                <label class="small mb-1">Tên danh mục</label>
-                                @Html.EditorFor(model => model.category_content, new { htmlAttributes = new { @class = "form-control" } })
-                                @Html.ValidationMessageFor(model => model.category_content, "", new { @class = "text-danger" })
+            <div class="col-12">
+                <div class="card">
+                    <div class="card-header bg-primary" style="height:100px">
+                        <h4 class="text-white" style="font-size:1.75rem">Tạo mới danh mục con</h4>
+                    </div>
+                </div>
+                <div class="col-12">
+                    @using (Html.BeginForm("Create1", "Categories", FormMethod.Post, new { }))
+                    {
+                        <div class="page-inner mt--5">
+                            <div class="row">
+                                <div class="col-xl-12">
+                                    <!-- Account details card-->
+                                    <div class="card mb-4">
+                                        <div class="card-header"><b>Thông tin chi tiết</b></div>
+                                        <div class="card-body" style="margin-top: 0.2rem">
+                                            <!-- Form Group (Chọn danh mục cha)-->
+                                            <div class="mb-3">
+                                                <label class="small mb-1">Chọn danh mục cha</label>
+                                                @Html.DropDownList("category_of_id", null, htmlAttributes: new { @class = "form-control" })
+                                                @Html.ValidationMessageFor(model => model.category_of_id, "", new { @class = "text-danger" })
+                                            </div>
+                                            <div class="mb-3">
+                                                <!-- Form Group (Tên danh mục)-->
+                                                <label class="small mb-1">Tên danh mục</label>
+                                                @Html.EditorFor(model => model.category_content, new { htmlAttributes = new { @class = "form-control" } })
+                                                @Html.ValidationMessageFor(model => model.category_content, "", new { @class = "text-danger" })
+                                            </div>
+                                            <div style="text-align: center; margin-top:1.8rem" class="mb-3">
+                                                <button style="width:180px; color:white" type="submit" class="btn btn-primary" onclick="if (!confirm('Tạo kỳ báo cáo mới?')) { return false }">
+                                                    Tạo mới
+                                                </button>
+                                                &emsp;
+                                                <a style="width:180px; color:white;" role="button" class="btn btn-danger" href="@Url.Action("Index", "Categories")">
+                                                    Hủy
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                        <div style="text-align: center; margin-top:1.8rem" class="mb-3">
-                            <button style="width:180px; color:white" type="submit" class="btn bg-primary-gradient" onclick="if (!confirm('Tạo kỳ báo cáo mới?')) { return false }">
-                                Tạo mới
-                            </button>
-                            &emsp;
-                            <a style="width:180px; color:white;" role="button" class="btn btn-danger" href="@Url.Action("Index", "ReportPeriods")">
-                                Hủy
-                            </a>
-                        </div>
-                    </div>
+                    }
                 </div>
             </div>
         </div>
     </div>
-}
+</section>
+
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
