--- a/MonthlyStatement/Areas/Admin/Views/Faculty/Edit.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/Faculty/Edit.cshtml
@@ -5,40 +5,57 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@using (Html.BeginForm("Edit", "Faculty", FormMethod.Post, new { }))
-{
-<div class="page-inner mt--5">
-    <div class="row">
-        <div class="col-xl-12">
-            <!-- Account details card-->
-            <div class="card mb-4">
-                <div class="card-header"><b>Thông tin chi tiết</b></div>
-
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                @Html.HiddenFor(model => model.faculty_id)
-
-                <div class="card-body" style="margin-top: 0.2rem">
-                    <!-- Form Group (Tên báo cáo)-->
-                    <div class="mb-3">
-                        <label class="small mb-1">Tên khoa</label>
-                        @Html.EditorFor(model => model.faculty_name, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.faculty_name, "", new { @class = "text-danger" })
+<section class="section">
+    <div class="section-body">
+        <div class="row">
+            <div class="col-12">
+                <div class="card">
+                    <div class="card-header bg-primary" style="height:100px">
+                        <h4 class="text-white" style="font-size:1.75rem">Chỉnh sửa thông tin @Model.faculty_name</h4>
                     </div>
-                    <div style="text-align: center; margin-top:1.8rem" class="mb-3">
-                        <button style="width:180px; color:white" type="submit" class="btn bg-primary-gradient" onclick="if (!confirm('Lưu chỉnh sửa?')) { return false }">
-                            Lưu
-                        </button>
-                        &emsp;
-                        <a style="width:180px; color:white;" role="button" class="btn btn-danger" href="@Url.Action("Index", "Faculty", new { id = Model.faculty_id})">
-                            Hủy
-                        </a>
-                    </div>
+                </div>
+                <div class="col-12">
+                    @using (Html.BeginForm("Edit", "Faculty", FormMethod.Post, new { }))
+                    {
+                        <div class="page-inner mt--5">
+                            <div class="row">
+                                <div class="col-xl-12">
+                                    <!-- Account details card-->
+                                    <div class="card mb-4">
+                                        <div class="card-header"><b>Thông tin chi tiết</b></div>
+
+                                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                                        @Html.HiddenFor(model => model.faculty_id)
+
+                                        <div class="card-body" style="margin-top: 0.2rem">
+                                            <!-- Form Group (Tên báo cáo)-->
+                                            <div class="mb-3">
+                                                <label class="small mb-1">Tên khoa</label>
+                                                @Html.EditorFor(model => model.faculty_name, new { htmlAttributes = new { @class = "form-control" } })
+                                                @Html.ValidationMessageFor(model => model.faculty_name, "", new { @class = "text-danger" })
+                                            </div>
+                                            <div style="text-align: center; margin-top:1.8rem" class="mb-3">
+                                                <button style="width:180px; color:white" type="submit" class="btn btn-primary" onclick="if (!confirm('Lưu chỉnh sửa?')) { return false }">
+                                                    Lưu
+                                                </button>
+                                                &emsp;
+                                                <a style="width:180px; color:white;" role="button" class="btn btn-danger" href="@Url.Action("Index", "Faculty", new { id = Model.faculty_id})">
+                                                    Hủy
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    }
                 </div>
             </div>
         </div>
     </div>
-</div>
-}
+</section>
+
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
