--- a/MonthlyStatement/Areas/Admin/Views/ReportPeriods/Details.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/ReportPeriods/Details.cshtml
@@ -4,63 +4,64 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="panel-header bg-primary-gradient">
-    <div class="page-inner py-5">
-        <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
-            <div>
-                <h2 class="text-white pb-2 fw-bold">Thông tin tài khoản của @Model.report_period_name</h2>
-            </div>
-        </div>
-    </div>
-</div>
-@using (Html.BeginForm("Details", "ReportPeriods", FormMethod.Post, new { }))
-{
-    <div class="page-inner mt--5">
+<section class="section">
+    <div class="section-body">
         <div class="row">
-            <div class="col-xl-12">
-                <!-- Account details card-->
-                <div class="card mb-4">
-                    <div class="card-header"><b>Thông tin chi tiết</b></div>
-                    <div class="card-body" style="margin-top: 0.2rem">
-                        <form>
-                            <!-- Form Group (Tên báo cáo)-->
-                            <div class="mb-3">
-                                <label class="small mb-1">Tên kỳ báo cáo</label>
-                                <input style="color:black" type="text" class="form-control" value="@Model.report_period_name" disabled>
-                            </div>
-                            <div class="row gx-3 mb-3">
-                                <!-- Form Group (Ngày bắt đầu)-->
-                                <div class="col-md-6">
-                                    <label class="small mb-1">Ngày bắt đầu</label>
-                                    <input style="color:black" type="text" class="form-control" value="@Model.start_date.Value.ToString("dd/MM/yyyy")" disabled>
-                                </div>
-                                <!-- Form Group (Ngày kết thúc)-->
-                                <div class="col-md-6">
-                                    <label class="small mb-1">Ngày kết thúc</label>
-                                    <input style="color:black" type="text" class="form-control" value="@Model.end_date.Value.ToString("dd/MM/yyyy")" disabled>
-                                </div>
-                            </div>
-                            <!-- Form Group (Trạng thái)-->
-                            @*<div class="mb-3">
-                                    <label class="small mb-1">Trạng thái báo cáo</label>
-                                    @Html.EditorFor(model => model.active)
-                                    @Html.ValidationMessageFor(model => model.active, "", new { @class = "text-danger" })
-                                </div>*@
-                            <div style="text-align: center; margin-top: 1.8rem" class="mb-3">
-                                <a style="width: 180px; color: white; " class="btn btn-warning" role="button" href="@Url.Action("Edit", "ReportPeriods", new { id = Model.report_period_id })">
-                                    Chỉnh sửa thông tin
-                                </a>
-                                &emsp;
-                                <a style="width: 180px; color: white; " class="btn btn-danger" role="button" href="@Url.Action("Index", "ReportPeriods")">
-                                    Quay lại
-                                </a>
-                            </div>
-                            <br />
-                        </form>
+            <div class="col-12">
+                <div class="card">
+                    <div class="card-header bg-primary" style="height:100px">
+                        <h4 class="text-white" style="font-size:1.75rem">Thông tin @Model.report_period_name</h4>
                     </div>
+                </div>
+                <div class="col-12">
+                    @using (Html.BeginForm("Details", "ReportPeriods", FormMethod.Post, new { }))
+                    {
+                        <div class="page-inner mt--5">
+                            <div class="row">
+                                <div class="col-xl-12">
+                                    <!-- Account details card-->
+                                    <div class="card mb-4">
+                                        <div class="card-header"><b>Thông tin chi tiết</b></div>
+                                        <div class="card-body" style="margin-top: 0.2rem">
+                                            <form>
+                                                <!-- Form Group (Tên báo cáo)-->
+                                                <div class="mb-3">
+                                                    <label class="small mb-1">Tên kỳ báo cáo</label>
+                                                    <input style="color:black" type="text" class="form-control" value="@Model.report_period_name" disabled>
+                                                </div>
+                                                <div class="row gx-3 mb-3">
+                                                    <!-- Form Group (Ngày bắt đầu)-->
+                                                    <div class="col-md-6">
+                                                        <label class="small mb-1">Ngày bắt đầu</label>
+                                                        <input style="color:black" type="text" class="form-control" value="@Model.start_date.Value.ToString("dd/MM/yyyy")" disabled>
+                                                    </div>
+                                                    <!-- Form Group (Ngày kết thúc)-->
+                                                    <div class="col-md-6">
+                                                        <label class="small mb-1">Ngày kết thúc</label>
+                                                        <input style="color:black" type="text" class="form-control" value="@Model.end_date.Value.ToString("dd/MM/yyyy")" disabled>
+                                                    </div>
+                                                </div>
+                                                <div style="text-align: center; margin-top: 1.8rem" class="mb-3">
+                                                    <a style="width: 180px; color: white; " class="btn btn-warning" role="button" href="@Url.Action("Edit", "ReportPeriods", new { id = Model.report_period_id })">
+                                                        Chỉnh sửa thông tin
+                                                    </a>
+                                                    &emsp;
+                                                    <a style="width: 180px; color: white; " class="btn btn-danger" role="button" href="@Url.Action("Index", "YearReport")">
+                                                        Quay lại
+                                                    </a>
+                                                </div>
+                                                <br />
+                                            </form>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    }
                 </div>
             </div>
         </div>
     </div>
-}
+</section>
+
 
