--- a/MonthlyStatement/Areas/Admin/Views/ReportPeriods/FormDepartmentEdit.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/ReportPeriods/FormDepartmentEdit.cshtml
@@ -6,66 +6,68 @@
     var lstCategory = Session["FormDepartmentEdit-lstCategory"] as IEnumerable<Category>;
 }
 
-<div class="panel-header bg-primary-gradient">
-    <div class="page-inner py-5">
-        <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
-            <div>
-                <h2 class="text-white pb-2 fw-bold">Báo cáo của bộ môn: @Model.ReportPeriod.report_period_name</h2>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="row">
-    <div class="col-12">
-        <div class="card">
-            <div class="card-body">
-                <form>
-                    <div class="form-group">
-                        <label for="exampleFormControlInput1">Tên người tạo mẫu báo cáo</label>
-                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Nhập tên người tạo">
+<section class="section">
+    <div class="section-body">
+        <div class="row">
+            <div class="col-12">
+                <div class="card">
+                    <div class="card-header bg-primary" style="height:100px">
+                        <h4 class="text-white" style="font-size:1.75rem">Báo cáo bộ môn: @Model.ReportPeriod.report_period_name</h4>
                     </div>
-                    <div class="form-group">
-                        <label for="exampleFormControlInput1">Tên mẫu báo cáo</label>
-                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Nhập mẫu báo cáo">
-                    </div>
-                    @foreach (var item in lstCategory.Where(c => c.category_of_id == null).ToList())
-                    {
-                        <div class="form-group">
-                            <div class="checkbox">
-                                <label for="check">
-                                    <input name="@item.category_id" type="checkbox" id="categorylv1-@item.category_id" value="@item.category_id" />
-                                    <span class="fake-input"></span>
-                                    <span class="fake-label">@item.category_content</span>
-                                </label>
-                            </div>
-                        </div>
-                        foreach (var items in lstCategory.Where(c => c.category_of_id == item.category_id).ToList())
-                        {
-                            <div class="media mt-3">
-                                <div class="pr-5" href="#">
+                </div>
+                <div class="col-12">
+                    <div class="card">
+                        <div class="card-body">
+                            <form>
+                                <div class="form-group">
+                                    <label for="exampleFormControlInput1">Tên người tạo mẫu báo cáo</label>
+                                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Nhập tên người tạo">
                                 </div>
                                 <div class="form-group">
-                                    <div class="checkbox">
-                                        <label for="check">
-                                            <input name="@items.category_of_id" type="checkbox" id="@(items.category_of_id)categorylv2-@(items.category_id)" value="@item.category_id" />
-                                            <span class="fake-input"></span>
-                                            <span class="fake-label">@items.category_content</span>
-                                        </label>
-                                    </div>
+                                    <label for="exampleFormControlInput1">Tên mẫu báo cáo</label>
+                                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Nhập mẫu báo cáo">
                                 </div>
-                            </div>
-                        }
-                    }
-                    <div class="text-right">
-                        <button class="btn btn-primary mr-1" type="submit">Lưu</button>
-                        <button class="btn btn-secondary" type="reset">Hủy</button>
+                                @foreach (var item in lstCategory.Where(c => c.category_of_id == null).ToList())
+                                {
+                                    <div class="form-group">
+                                        <div class="checkbox">
+                                            <label for="check">
+                                                <input name="@item.category_id" type="checkbox" id="categorylv1-@item.category_id" value="@item.category_id" />
+                                                <span class="fake-input"></span>
+                                                <span class="fake-label">@item.category_content</span>
+                                            </label>
+                                        </div>
+                                    </div>
+                                    foreach (var items in lstCategory.Where(c => c.category_of_id == item.category_id).ToList())
+                                    {
+                                        <div class="media mt-3">
+                                            <div class="pr-5" href="#">
+                                            </div>
+                                            <div class="form-group">
+                                                <div class="checkbox">
+                                                    <label for="check">
+                                                        <input name="@items.category_of_id" type="checkbox" id="@(items.category_of_id)categorylv2-@(items.category_id)" value="@item.category_id" />
+                                                        <span class="fake-input"></span>
+                                                        <span class="fake-label">@items.category_content</span>
+                                                    </label>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    }
+                                }
+                                <div class="text-right">
+                                    <button class="btn btn-primary mr-1" type="submit">Lưu</button>
+                                    <button class="btn btn-danger" type="reset">Hủy</button>
+                                </div>
+                            </form>
+                        </div>
                     </div>
-                </form>
+                </div>
             </div>
         </div>
     </div>
-</div>
+</section>
+
 <script src="~/Scripts/jquery-3.4.1.min.js"></script>
 <script>
     $(document).ready(function () {
